10/27/2003
	- DNS TTLs and other 32 bit unsigned values are now represented as
	  longs, not ints.  This is an API change, but allows the full range
	  to be used.
	- Add the Serial class for serial arithmetic.

9/30/2003
	- 1.4.3 released.
	- Fix a bit of code that required Java 1.4.

9/29/2003
	- 1.4.2 released.

9/26/2003
	- A Lookup shouldn't die when receiving a referral response; it should
	  return an error. (reported by Elinor Chang <elinor_chang@yahoo.com>)
	- A Lookup should distinguish between timeouts and other network
	  errors.
	- When parsing IP addresses from text format, treat the presence of
	  a leading zero on an octet as an error.  It's unclear whether
	  it would be treated as decimal or octal, which means it should
	  be fixed. (reported by Marcos Sanz/Denic <sanz@denic.de>)

9/17/2003
	- Fix an off-by-one error in the Name code; labels of length 63
	  were not accepted (patch from David Blacka <davidb@verisignlabs.com>)

9/2/2003
	- 1.4.1 released.

9/1/2003
	- The Update.delete(Record) method needs to reset the TTL of the cloned
	  record to 0. (reported by Edwin R. Rivera <erivera@moniker.com>)

8/23/2003
	- Change Record.fromString() to expect an EOL/EOF token at the end
	  of the string, so that extraneous tokens can be detected.  The master
	  file parser was updated to this change.
	  (noticed by Bob Halley <bob.halley@nominum.com>)

8/22/2003
	- Changing TXTRecord.getStrings() from returning a List of Strings
	  to a List of byte []'s was a bad idea.  Change it back, and
	  add TXTRecord.getStringsAsByteArrays().
	  (reported by Blake Ramsdell <blake@brutesquadlabs.com>)

8/21/2003
	- 1.4.0 released.

8/20/2003
	- Add the ReverseMap class, which contains functions to construct
	  names to be used in reverse map zones.

8/13/2003
	- When looking up a one label unqualified name which fails to match
	  all searchlist entries, don't append the root label and try again.
	  This is recommended by RFC 1536, section 6: "Only if the name, so